[package]
name = "rustgi"
version = "0.1.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustgi"
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "1.1.0"
lazy_static = "1.5.0"
pyo3 = { version = "0.22.5", features = ["anyhow", "py-clone"] }
pyo3-log = "0.11.0"
log = { version = "0.4.22" }
tokio = { version = "1.40.0", features = ["net", "signal", "rt", "macros", "io-util"] }
hyper = { version = "1.5.0", features = ["server", "http1", "http2"] }
http-body-util = "0.1.2"
hyper-util = { features = ["tokio", "http2", "http1", "server", "service"], version = "0.1.9" }
futures = "0.3.31"
urlencoding = "2.1.3"
encoding = "0.2.33"
bytes = "1.7.2"
rayon = "1.10.0"
tokio-rayon = "2.1.0"
anyhow = "1.0.89"

[dev-dependencies]
rustgi = { path = ".", features = ["python"] }

[features]
python = ["pyo3/extension-module"]

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false

[profile.dev]
debug = true
