[package]
name = "rustgi"
version = "0.1.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustgi"
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "1.3.1"
pyo3 = { version = "0.25.1", features = ["anyhow", "py-clone"] }
pyo3-log = "0.12.4"
log = { version = "0.4.27" }
tokio = { version = "1.45.1", features = ["net", "signal", "rt", "macros", "io-util"] }
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
http-body-util = "0.1.3"
hyper-util = { features = ["tokio", "http2", "http1", "server", "service"], version = "0.1.14" }
futures = "0.3.31"
urlencoding = "2.1.3"
encoding = "0.2.33"
bytes = "1.10.1"
rayon = "1.10.0"
tokio-rayon = "2.1.0"
anyhow = "1.0.98"

[dev-dependencies]
rustgi = { path = ".", features = ["python"] }

[features]
python = ["pyo3/extension-module"]

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false

[profile.dev]
debug = true
